production/car-dealer-cms/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-dealer-dep
  namespace: car-dealer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: car-dealer-app
  template:
    metadata:
      labels:
        app: car-dealer-app
    spec:
      containers:
        - name: car-dealer-app
          image: xanderflinn/deploy-demo:a21349f66f56b3b5d3007ad8e1d7c8ea2947d469
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: env-file
              readOnly: true
              mountPath: "/app/.env"
              subPath: .env
      volumes:
        - name: env-file
          secret:
            secretName: next-secret
