production/car-dealer-cms/service.yml
apiVersion: v1
kind: Service
metadata:
  name: car-dealer-svc
  namespace: car-dealer
  labels:
    app: car-dealer-app
spec:
  selector:
    app: car-dealer-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
