production/car-dealer-cms/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-dealer-ingress
  namespace: car-dealer
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: external-nginx
  tls:
    - hosts:
        - motors.rsxdev.co.in
      secretName: motors-tls
  rules:
    - host: motors.rsxdev.co.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: car-dealer-svc
                port:
                  number: 80
